Fixed poster overflow issue

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,6 +2,7 @@ body {
     font-family: Helvetica, sans-serif;
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
 }
 
 .link {
